<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:subtitleTextColor="@color/white"
            app:title="Aktarmadan Araç Çıkış"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1"
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <com.manojbhadane.QButton
                android:id="@+id/btn_barkod_okut"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Barkod Okut"
                android:textColor="@android:color/white"
                app:qb_backgroundColor="@color/btnBlue1"
                app:qb_radius="0"
                app:qb_strokeColor="@color/color_1_dark"
                app:qb_strokeWidth="1"/>

            <EditText
                android:id="@+id/edt_sefer_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/seferNumarasi"
                android:inputType="number"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_tracking_shipping"
                style="@style/Button.Primary"
                android:background="@color/primaryColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/tracking_cargo"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_below="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_plaka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="64sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview3"
        android:layout_below="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_varis_sube"
                android:textSize="36sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/scan_fragment"
        android:layout_below="@id/cardview3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

    <com.manojbhadane.QButton
        android:id="@+id/qb_arac_cikis"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/btnAracCikis"
        android:textColor="@android:color/white"
        app:qb_backgroundColor="@color/btnGreenDark"
        app:qb_radius="10"
        app:qb_strokeColor="@color/btnGreen"
        app:qb_strokeWidth="1"/>

</RelativeLayout>